# babeltrace-vala

./: .gitignore  Makefile.am  NEWS  README  babeltrace-vala.spec  configure.ac  download-traceset.sh  testbuild.sh
src/: babeltrace.vapi
tests/: Makefile.am  test-babeltrace.vala
